--- a/owner/owner-client/package.json
+++ b/owner/owner-client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "ng-gallery": "^11.0.0",
+    "ngx-cookie-service": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
