--- a/Server/API/API.csproj
+++ b/Server/API/API.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\restaurant\" />
+  </ItemGroup>
+
 </Project>
