--- a/Server/API/API.csproj
+++ b/Server/API/API.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\default\" />
     <Folder Include="wwwroot\images\restaurant\" />
   </ItemGroup>
 
