--- a/Server/API/API.csproj
+++ b/Server/API/API.csproj
@@ -23,6 +23,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\default\" />
+    <Folder Include="wwwroot\images\employee\" />
     <Folder Include="wwwroot\images\restaurant\" />
   </ItemGroup>
 
