Can upload profile image on backend

--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -481,3 +481,4 @@ $RECYCLE.BIN/
 API/wwwroot/images/employee/*
 API/wwwroot/images/restaurant/*
 API/wwwroot/images/menuItem/*
+API/wwwroot/images/owner/*
