Can upload user profile image

--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -482,3 +482,4 @@ API/wwwroot/images/employee/*
 API/wwwroot/images/restaurant/*
 API/wwwroot/images/menuItem/*
 API/wwwroot/images/owner/*
+API/wwwroot/images/user/*
