--- a/Server/ApplicationCore/ApplicationCore.csproj
+++ b/Server/ApplicationCore/ApplicationCore.csproj
@@ -8,8 +8,12 @@
 
   <ItemGroup>
     <Folder Include="Contracts\" />
-    <Folder Include="Entities\" />
     <Folder Include="Enums\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
 
 </Project>
