--- a/clients/employee-client/package.json
+++ b/clients/employee-client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@microsoft/signalr": "^8.0.0",
     "ng-gallery": "^11.0.0",
     "ngx-cookie-service": "^16.0.2",
     "rxjs": "~7.8.0",
