--- a/clients/shared-libs/package.json
+++ b/clients/shared-libs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employee-client",
+  "name": "shared-libs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,36 +11,31 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
-    "@angular/cdk": "^16.2.7",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
-    "@angular/material": "^16.2.7",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@microsoft/signalr": "^8.0.0",
-    "ng-gallery": "^11.0.0",
-    "ngx-cookie-service": "^16.0.2",
     "rxjs": "~7.8.0",
-    "shared-cards": "file:../shared-libs/dist/shared-cards",
     "tslib": "^2.3.0",
-    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
-    "@types/uuid": "^9.0.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^16.0.0",
     "typescript": "~5.1.3"
   }
 }
