--- a/clients/customer-client/angular.json
+++ b/clients/customer-client/angular.json
@@ -23,6 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "preserveSymlinks": true,
             "outputPath": "dist/customer-client",
             "index": "src/index.html",
             "main": "src/main.ts",
