--- a/clients/shared-lib/package.json
+++ b/clients/shared-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customer-client",
+  "name": "shared-lib",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,16 +20,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@microsoft/signalr": "^8.0.0",
-    "ng-gallery": "^11.0.0",
-    "ngx-cookie-service": "^17.0.1",
     "rxjs": "~7.8.0",
-    "shared-cards": "file:../shared-lib/dist/shared-cards",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
@@ -39,6 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^16.0.0",
     "typescript": "~5.1.3"
   }
 }
