--- a/clients/owner-client/angular.json
+++ b/clients/owner-client/angular.json
@@ -38,7 +38,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
-              "src/theme.scss"
+              "src/theme.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
