--- a/clients/owner-client/package.json
+++ b/clients/owner-client/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@microsoft/signalr": "^8.0.0",
-    "@swimlane/ngx-charts": "^20.5.0",
+    "chart.js": "^4.4.1",
     "ng-gallery": "^11.0.0",
+    "ng2-charts": "^5.0.4",
     "ngx-cookie-service": "^16.0.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
@@ -35,7 +36,6 @@
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
-    "@types/d3": "^7.4.3",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.5",
     "jasmine-core": "~4.6.0",
