--- a/mobile/customer_client/android/app/src/main/AndroidManifest.xml
+++ b/mobile/customer_client/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="customer_client"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
