--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.2
   flutter_riverpod: ^2.4.9
+  riverpod_annotation: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.3.9
+  build_runner: ^2.4.8
+  custom_lint: ^0.5.8
+  riverpod_lint: ^2.3.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
