--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.2
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
