--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
   flutter_secure_storage: ^4.2.1
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
