--- a/Server/API/appsettings.json
+++ b/Server/API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DockerConnection": "Host=postgres;Port=5432;User Id=zuna21;Password=12345678;Database=NoshNexusBeta;"
+    "BetaConnection": "Host=localhost;Port=5432;User Id=zuna21;Password=12345678;Database=NoshNexusBeta;"
   },
   "TokenKey": "sdofa dfi iasd fuiweuriwerjuijw kejrwek jrkwejrkewj kwj rkejae kjkadsjfkasdjfiweruiqer djkafj iweuriewu iewuri u iuaepr upu pe upweriewri"
 }
