--- a/Server/API/appsettings.Development.json
+++ b/Server/API/appsettings.Development.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "BetaConnection": "Host=noshnexus.com;Port=5432;User Id=zuna21;Password=12345678;Database=NoshNexusBeta;",
-    "DockerConnection": "Host=localhost;Port=5432;User Id=zuna21;Password=12345678;Database=NoshNexusBeta;"
+    "BetaConnection": "Host=noshnexus.com;Port=6969;User Id=zuna21;Password=12345678;Database=NoshNexusBeta;"
   },
   "TokenKey": "sdofa dfi iasd fuiweuriwerjuijw kejrwek jrkwejrkewj kwj rkejae kjkadsjfkasdjfiweruiqer djkafj iweuriewu iewuri u iuaepr upu pe upweriewri"
 }
