--- a/clients/owner-client/angular.json
+++ b/clients/owner-client/angular.json
@@ -48,8 +48,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.50mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
