--- a/clients/owner-client/package.json
+++ b/clients/owner-client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@microsoft/signalr": "^8.0.0",
+    "angularx-qrcode": "^16.0.2",
     "chart.js": "^4.4.1",
     "jwt-decode": "^4.0.0",
     "ng-gallery": "^11.0.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/qrcode": "^1.5.5",
     "@types/uuid": "^9.0.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
