--- a/clients/owner-client/package.json
+++ b/clients/owner-client/package.json
@@ -23,6 +23,7 @@
     "@microsoft/signalr": "^8.0.0",
     "angularx-qrcode": "^16.0.2",
     "chart.js": "^4.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "ng-gallery": "^11.0.0",
     "ng2-charts": "^5.0.4",
