--- a/clients/owner-client/package.json
+++ b/clients/owner-client/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@microsoft/signalr": "^8.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angularx-qrcode": "^16.0.2",
     "chart.js": "^4.4.1",
     "jspdf": "^2.5.1",
