--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   riverpod_annotation: ^2.3.3
   flutter_secure_storage: ^4.2.1
   timeago: ^3.6.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
