--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,6 +44,8 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   timeago: ^3.6.0
   image_picker: ^1.0.7
+  flutter_translate: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/i18n/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
