--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -483,3 +483,4 @@ API/wwwroot/images/restaurant/*
 API/wwwroot/images/menuItem/*
 API/wwwroot/images/owner/*
 API/wwwroot/images/user/*
+API/noshnexus-e3511-firebase-adminsdk-ry4ef-cc6a44849f.json
