Added notification to flutter application

--- a/mobile/customer_client/pubspec.yaml
+++ b/mobile/customer_client/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^1.0.7
   flutter_translate: ^3.1.0
   intl: ^0.18.1
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
 
 
 dev_dependencies:
