--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -484,3 +484,4 @@ API/wwwroot/images/menuItem/*
 API/wwwroot/images/owner/*
 API/wwwroot/images/user/*
 API/noshnexus-e3511-firebase-adminsdk-ry4ef-cc6a44849f.json
+API/appsettings.Development.json
