removed appsetting json

--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -485,3 +485,4 @@ API/wwwroot/images/owner/*
 API/wwwroot/images/user/*
 API/noshnexus-e3511-firebase-adminsdk-ry4ef-cc6a44849f.json
 API/appsettings.Development.json
+API/appsettings.json
